Fixed horizontal scrollbar

--- a/dev/home/home.scss
+++ b/dev/home/home.scss
@@ -15,7 +15,7 @@
 
 #lead-content {
   display: table-cell;
-  padding: 30px;
+  padding: 30px 0;
   vertical-align: middle;
 }
 
